# ariadnePy

./: .gitignore  README.md  pyproject.toml
python/: append.py  ariadne.py  cache.py
src/ariadnepy/: __init__.py  exceptions.py
src/ariadnepy/anndata/: __init__.py  _humann.py  _modules.py
src/ariadnepy/core/: __init__.py  _download.py  _graph.py  _versions.py  versions.json
src/ariadnepy/graph/: __init__.py  _names.py  _search.py  _weave.py
src/ariadnepy/io/: __init__.py  _ott.py  _sparql.py
src/ariadnepy/plot/: __init__.py  _custom.py  _draw.py  _utils.py  exceptions.py
src/ariadnepy/resources/: __init__.py  _cache.py  _data.py  _parsers.py  _rds.py
src/ariadnepy/resources/data/: butyrate.csv
tests/: test_cache.py  test_core.py  test_utils.py
tests/test_anndata/: test_modules.py
tests/test_core/: test_download.py  test_graph.py  test_versions.py
tests/test_core/test_graph/: test_names.py  test_search.py  test_weave.py
