[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ariadnepy"
version = "0.1.0"
description = "Python interface to the ariadne multi-omic knowledge graph"
readme = "README.md"
license = { text = "Artistic-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Aditi", email = "abhiyan@analyticsandsociety.com" },
]
keywords = ["bioinformatics", "multi-omics", "graph", "knowledge-graph", "microbiome"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Artistic License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "networkx>=3.0",
    "igraph>=0.11",
    "pandas>=2.0",
    "requests>=2.28",
    "platformdirs>=3.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
rds = ["pyreadr>=0.5"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs",
    "networkx-stubs",
]

[project.urls]
Homepage = "https://github.com/Minotau-R/ariadne"
"Bug Tracker" = "https://github.com/Minotau-R/ariadne/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ariadnepy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PT"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
